--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,21 @@ torchvision==0.22.0+cu118
 torchaudio==2.7.0+cu118
 onnxruntime-gpu
 tqdm
+matplotlib
+scipy
+Pillow
+numpy
+prettytable
+easydict
+scikit-learn
+pyyaml
+yacs
+termcolor
+tabulate
+tensorboard
+gdown
+faiss-gpu
+faiss
+lap
+filterpy
+SQLAlchemy
